syntax = "proto3";
package demo.echo;

option java_multiple_files = true;
option java_package = "org.pronzato.fabric.test.grpc.proto";
option java_outer_classname = "EchoProto";

service Echo {
  rpc say(EchoRequest) returns (EchoReply);
  rpc stream(EchoData) returns (stream EchoData);
}

message EchoRequest {
  string msg = 1;
  string username = 2;
}

message EchoReply {
  string msg = 1;
  string instance = 2;
  string group = 3;
}

message EchoData {
  string value = 1;
}
